--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section>
             <p>Soy una persona que ha recorrido diferentes ámbitos a lo largo de mis 26 años, recogiendo diversas experiencias, siempre buscando aquello que me apasiona y persiguiéndolo con todas mis ambiciones.
             </p>
+            <button id="portfolio">Ver Portfolio</button>
         </section>
         <div class="division-pequena"  id="experiencias"></div>
         <section>
