Otoñal mode agregado

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <a href="#experiencias">Experiencia</a>
             <a href="#contacto">Contacto</a>
         </nav>
+        <div class="wrap-toggle">
+            <input type="checkbox" id="toggle" class="offscreen">
+            <label for="toggle" class="switch"></label>
+        </div>
     </header>
     <main>
         <!--========================================== Sobre mí ==========================================-->
@@ -84,6 +88,7 @@
             </div>
         </div>
     </footer>
+    <script src="otoñoscript.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
