--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,10 @@
         <nav>
             <a href="index.html">Volver al inicio</a>
         </nav>
+        <div class="wrap-toggle">
+            <input type="checkbox" id="toggle" class="offscreen">
+            <label for="toggle" class="switch"></label>
+        </div>
     </header>
     <main>
         <div class="division-pequena"></div>
@@ -28,7 +32,7 @@
                 <div class="marco">
                     <img src="./imágenes/cv.png" alt="Curriculum Vitae">
                 </div>
-                <button><a class="img-clip" href="https://axelpalwo.github.io/cvaxelpal/" target="_blank"></a>Curriculum Vitae</button>
+                <button><a class="img-clip" href="https://axelpalwo.github.io/cvaxelpal/" target="_blank">Curriculum Vitae</a></button>
             </div>
             <div class="caja">
                 <div class="marco">
@@ -44,3 +48,5 @@
             </div>
         </div>
     </main>
+    <script src="otoñoscript.js"></script>
+</body>
